# learning-rust

./: .gitignore  CHANGELOG.md  README.md
calculator/src/: main.rs  operations.rs  utils.rs
todo-list-cli/: Cargo.toml  todo.json  todo_backup.json
todo-list-cli/src/: cli_manager.rs  main.rs  model.rs  todo_manager.rs
todo-list-web/: Cargo.toml  Trunk.toml  index.html
todo-list-web/src/: app.rs  main.rs
todo-list-web/src/presentation/assets/css/: style.css
