[package]
name = "todo-list-web"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }                            
wasm-bindgen = "0.2"                      
wasm-bindgen-futures = "0.4"              
serde = { version = "1.0", features = ["derive"] }   
serde_json = "1.0"                         
gloo-storage = "0.2"                      
gloo-utils = "0.2"                        
gloo-file = "0.2"                         
web-sys = { version = "0.3", features = ["Window", "Storage", "Document", "HtmlElement", "Text"] }  
console_error_panic_hook = "0.1.7"

